# bigerror

./: .ignore  Cargo.toml  justfile
.cargo/: config.toml
bigerror/: Cargo.toml
bigerror/src/: attachment.rs  context.rs  lib.rs
bigerror_derive/: Cargo.toml
bigerror_derive/src/: attributes.rs  lib.rs
