[workspace]
members = ["bigerror", "bigerror_derive"]
resolver = "2"

[workspace.package]
edition = "2024"
description = "handle big errors ¯\\_(ツ)_/¯"
license = "MIT"
documentation = "https://docs.rs/bigerror"
repository = "https://github.com/mkatychev/bigerror"

[workspace.dependencies]
derive_more = { version = "2", features = ["display"], default-features = false }
tracing = "0.1"
proc-macro2 = "1.0.101"
quote = "1.0.40"
error-stack = { version =  "0.6.0", default-features = false }
syn = "2.0.106"
bigerror-derive = { path = "./bigerror_derive", version = "0.1.0" }

[workspace.lints.clippy]
uninlined_format_args = "deny"
unnecessary_mut_passed = "deny"
unused_async = "deny"
