[package]
name = "bigerror"
version = "0.10.2"
edition.workspace = true
description.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true

[features]
default = ["std", "backtrace"]
std = ["error-stack/std", "derive_more/std", "tracing?/std"]
backtrace = ["error-stack/backtrace"]

anyhow = ["error-stack/anyhow"]
eyre = ["error-stack/eyre"]
futures = ["error-stack/futures"]
hooks = ["error-stack/hooks"]
serde = ["error-stack/serde"]
spantrace = ["error-stack/spantrace"]
tracing = ["error-stack/tracing"]
# unstable = ["error-stack/unstable"]


[dependencies]
error-stack = { workspace = true, default-features = false }
tracing = { workspace = true, optional = true, features = ["attributes"] }
bigerror-derive.workspace = true
derive_more.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
